src/main/resources/edu/wpi/N/css/newMapDisplay.css
@font-face {
    src: url('Karla-Regular.ttf');
}

.pane:hover {
    -fx-border-color: #4A69C6;
    -fx-border-width: 2px;
}

.text-area {
    -fx-text-fill: black;
    -fx-background-color: #E6EBF2;
    -fx-pref-height: 395;
    -fx-pref-width: 255;
}

.textField {
    -fx-font-family: 'Karla';
    -fx-text-fill: BLACK;
    -fx-background-color: #E6EBF2;
    -fx-pref-height: 35px;
    -fx-background-radius: 25px;
    -fx-prompt-text-fill: GREY;
    -fx-font-size: 15;
}

.list-cell {
    -fx-font-family: 'Karla';
    -fx-background-radius: 25px;
    -fx-background-color: #E6EBF2;
    -fx-font-size: 12;
    -fx-padding: 8px;
}

.list-cell:selected {
    -fx-background-color: #7E9AB6;
}

.button {
    -fx-font-family: 'Karla';
    -fx-background-color: #4A69C6;
    -fx-background-radius: 25px;
    -fx-text-fill: #E6EBF2;
    -fx-pref-width: 100px;
    -fx-pref-height: 25px;
    -fx-font-size: 18;
}

.toggle {
    -fx-font-family: 'Karla';
    -fx-text-fill: #e6ebf2;
    -fx-background-color: #263051;
    -fx-font-size: 18;
}

.label {
    -fx-font-family: 'Karla';
    -fx-text-alignment: center;
    -fx-text-fill: #E6EBF2;
    -fx-font-size: 24;
    -fx-background-radius: 25px;
}

.quick-access {
    -fx-font-family: 'Karla';
    -fx-pref-width: 125px;
    -fx-pref-height: 25px;
    -fx-background-color: #4A69C6;
}

.jfx-tab-pane {
    -fx-pref-width: 345px;
    -fx-pref-height: 800px;
}

.jfx-tab-pane .tab-selected-line {
    -fx-background-color: #E6EBF2;
}

.jfx-tab-pane .tab-header-background {
    -fx-background-color: #263051;
    -fx-pref-height: 50px;
    -fx-effect: drop-shadow(20px 0px 30px #000000);
}


.jfx-tab-pane .tab {
    -fx-pref-width: 90px;
    -fx-pref-height: 50px;
}

.jfx-tab-pane .tab:selected {
    -fx-background-color: #4A69C6;
}

.tree-view .scroll-bar:horizontal{
    -fx-vbar-policy: NEVER;
}

.tree-view .tree-cell {
    -fx-font-size: 15px;
    -fx-wrap-text: true;
    -fx-pref-width: 300px;
}

.tree-view .tree-cell .label {
    -fx-wrap-text: true;
    -fx-pref-width: 300px;
}

